--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="theme-color" content="#0a0a0f" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+		<meta name="theme-color" content="#0a0a0f" media="(prefers-color-scheme: light)" />
+		<meta name="theme-color" content="#0a0a0f" media="(prefers-color-scheme: dark)" />
+		<meta name="msapplication-navbutton-color" content="#0a0a0f" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
