--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,9 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
+		<link rel="icon" href="/favicon.ico" sizes="32x32" />
+		<link rel="icon" href="/favicon.png" type="image/png" />
+		<link rel="apple-touch-icon" href="/favicon.png" />
 		<link rel="alternate" href="/rss.xml" type="application/rss+xml" title="RSS" />
 		<link rel="manifest" href="/manifest.json" />
 		%sveltekit.head%
