--- a/src/app.html
+++ b/src/app.html
@@ -9,9 +9,11 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-		<link rel="icon" href="/favicon.ico" sizes="32x32" />
-		<link rel="icon" href="/favicon.png" type="image/png" />
-		<link rel="apple-touch-icon" href="/favicon.png" />
+		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="/favicon-16x16.png" type="image/png" sizes="16x16" />
+		<link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32" />
+		<link rel="icon" href="/favicon-48x48.png" type="image/png" sizes="48x48" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
 		<link rel="alternate" href="/rss.xml" type="application/rss+xml" title="RSS" />
 		<link rel="manifest" href="/manifest.json" />
 		%sveltekit.head%
